# cargo-build-rx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
src/: cli.rs  context.rs  finding.rs  lib.rs  main.rs  output.rs
src/checks/: build_scripts.rs  dev_deps.rs  duplicates.rs  features.rs  incremental.rs  linker.rs  mod.rs  proc_macros.rs  profile.rs  toolchain.rs  workspace.rs
tests/: smoke.rs
tests/fixtures/bloated/: Cargo.toml
tests/fixtures/bloated/src/: lib.rs
tests/fixtures/clean/: Cargo.toml
tests/fixtures/clean/src/: lib.rs
