[package]
name = "cargo-build-rx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Compile-time diagnostic and prescription tool for Rust projects"
repository = "https://github.com/Robby955/cargo-build-rx"
keywords = ["cargo", "build", "compile-time", "diagnostic"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
