[package]
name = "cargo-build-rx"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Compile-time diagnostic and prescription tool for Rust projects"
repository = "https://github.com/Robby955/cargo-build-rx"
homepage = "https://github.com/Robby955/cargo-build-rx"
documentation = "https://docs.rs/cargo-build-rx"
readme = "README.md"
authors = ["Rob Sneiderman"]
keywords = ["cargo", "build", "compile-time", "performance"]
categories = ["development-tools::cargo-plugins", "development-tools::profiling"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
